fix to ordered list items counter spacing

--- a/assets/styles/theme/_theme.scss
+++ b/assets/styles/theme/_theme.scss
@@ -2310,7 +2310,7 @@ table tr th {
 	width: 20px;
 	display: inline-block;
 	font-weight: $font-weight-bold;
-	margin: 0px 0px 0px -12px;
+	margin: 0px 0px 0px -21px;
 }
 
 .entry-content ol li>ol>li,
